tests/fail/stable/old_formats.stderr
error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:x}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{x}asdf"
                ^
 --> tests/fail/stable/old_formats.rs:2:27
  |
2 |     sscanf::sscanf!("hi", "asdf{x}asdf", usize);
  |                           ^^^^^^^^^^^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:b}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{b}asdf"
                ^
 --> tests/fail/stable/old_formats.rs:3:27
  |
3 |     sscanf::sscanf!("hi", "asdf{b}asdf", usize);
  |                           ^^^^^^^^^^^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:o}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{o}asdf"
                ^
 --> tests/fail/stable/old_formats.rs:4:27
  |
4 |     sscanf::sscanf!("hi", "asdf{o}asdf", usize);
  |                           ^^^^^^^^^^^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:r4}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{r4}asdf"
                ^^
 --> tests/fail/stable/old_formats.rs:5:27
  |
5 |     sscanf::sscanf!("hi", "asdf{r4}asdf", usize);
  |                           ^^^^^^^^^^^^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:r13}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{r13}asdf"
                ^^^
 --> tests/fail/stable/old_formats.rs:6:27
  |
6 |     sscanf::sscanf!("hi", "asdf{r13}asdf", usize);
  |                           ^^^^^^^^^^^^^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:/.*/}.
       If this is actually a type whose name happens to match the old format, sorry.
       Please create an UpperCamelCased wrapper type for it.:
       At "asdf{/.*/}asdf"
                ^^^^
 --> tests/fail/stable/old_formats.rs:7:27
  |
7 |     sscanf::sscanf!("hi", "asdf{/.*/}asdf", usize);
  |                           ^^^^^^^^^^^^^^^^
